@@ -6,16 +6,24 @@ This template is for displaying the portfolio tags
 
 <?php get_header(); ?>
 
-			<div id="portfolio">
-
+			<div id="portfolio"<?php if ( of_get_option('portfolio_sidebar') ) {?> class="full-width"<?php }?>>
+            
             <?php if (have_posts()) : $count = 0; ?>
             <?php while (have_posts()) : the_post(); $count++; global $post; ?>
             
-            <div class="portfolio-item item<?php echo $count; ?> <?php if ($count % 3 == 0) { echo 'last'; } ?>">
+             <div class="portfolio-item item<?php echo $count; ?> <?php if ($count % 3 == 0) { echo 'last'; } ?>">
             
-				<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e('Permanent Link to', 'portfoliopress'); ?> <?php the_title_attribute(); ?>" class="thumb"><?php the_post_thumbnail('portfolio-thumbnail'); ?></a>
+            	<?php if ( of_get_option('portfolio_sidebar') ) { ?>
+                
+                	<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e('Permanent Link to', 'portfoliopress'); ?> <?php the_title_attribute(); ?>" class="thumb"><?php the_post_thumbnail('portfolio-thumbnail-fullwidth'); ?></a>
+                
+                <?php } else { ?>
+                
+                	<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e('Permanent Link to', 'portfoliopress'); ?> <?php the_title_attribute(); ?>" class="thumb"><?php the_post_thumbnail('portfolio-thumbnail'); ?></a>
+                
+                <?php } ?>
             
-			<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e('Permanent Link to', 'portfoliopress'); ?> <?php the_title_attribute(); ?>" class="title-overlay"><?php the_title() ?></a>
+				<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e('Permanent Link to', 'portfoliopress'); ?> <?php the_title_attribute(); ?>" class="title-overlay"><?php the_title() ?></a>
             
             </div>
             
@@ -50,5 +58,5 @@ This template is for displaying the portfolio tags
 
 			</div><!-- #content -->
 
-<?php get_sidebar(); ?>
+<?php if ( !of_get_option('portfolio_sidebar') ) { get_sidebar(); } ?>
 <?php get_footer(); ?>
