@@ -6,6 +6,7 @@ Portfolio Press 0.7.5
 - Fixes left column layout in portfolio pages
 - Updates icons in options panel
 - Fixes for comment display on single.php
+- Added option for displaying portfolio archives full width
 
 Portfolio Press 0.7.4
 
